more changes to model slides

--- a/doc/Group16_Presentation.Rmd
+++ b/doc/Group16_Presentation.Rmd
@@ -265,27 +265,35 @@ Clusters between age and all other variables
 
 <!-- Melanie -->
 
-## Single Parameter Logistic Regression performance
+## Single Parameter Logistic Regression
 
-![](../results/Single_Prediction.png){width=100%}
+<font size="3"> Performing single parameter evaluation to have a baseline</font>
+
+fig.allign = "center"
+
+
+![](../results/Single_Prediction.png){width=60%, height=25.5%}
+<font size = "2"> The precision of the BMI & GH is 29% and 68% respectively</font>
 
 <!-- Varun -->
 
-## Impact Estimation with confidence interval
+## Parameter Impact Estimation
 
-![](../results/Impact_Estimation_with_confidence_interval.png){width=100%}
+![](../results/Impact_Estimation_with_confidence_interval.png){width=90%}
 
 <!-- Varun -->
 
-## Parameters vs p value
+## Parameters vs P-value
 
 ![](../results/Parameters_vs_p_value.png){width=100%}
 
 <!-- Varun -->
 
-## Logistic Regression
+## Multi-Factorial Logistic Regression
 
 ![](../results/Prediction_on_colinearity_check.png){width=100%}
+
+<font size = "2"> The precision of this model is at 80%!!</font>
 
 <!-- Varun -->
 
