--- a/doc/Group16_Presentation.Rmd
+++ b/doc/Group16_Presentation.Rmd
@@ -41,9 +41,10 @@ knitr::opts_chunk$set(echo = FALSE)
 - <font size="3">Contains missing values to handle</font>
 - <font size="3">Explore correlations between diagnosis with DM and the other variables</font>
 
-<!-- Casper -->
+<!-- Melanie -->
 
-## The data
+
+## Variable types
 
 ```{r echo=FALSE, message=FALSE}
 my_data_raw <- read_tsv(file = "../data/_raw/nhgh.tsv")
@@ -69,21 +70,7 @@ variables_described <- colnames(my_data_raw) %>%
                   "24.8 - 47", "16.8 - 61", "52 - 179", 
                   "2.6 - 41.1", "3.8 - 40.4", 
                   "4 - 16.4", "2.5 - 5.3", "1 - 90", "0.14 - 15.66"))
-```
-
-
-
-```{r}
-variables_described %>% 
-  kable() %>%
-  kable_styling(bootstrap_options = c("striped", 
-                                      "condensed"), 
-                font_size = 10)
-```
-
-<!-- Casper -->
-
-## Variable types
+``` 
 
 ```{r}
 variables_described %>% 
@@ -98,7 +85,7 @@ variables_described %>%
 ```
 DX does not differentiate between type I and type II
 
-<!-- Casper -->
+<!-- Melanie -->
 
 # Methods
 
@@ -137,7 +124,7 @@ Here we implemented KNN (K=5) in tidyverse. We did not optimize K.
 
 ## Data cleaning - Removal of outliers
 
-![](../results/outliers.png){width=100%}
+![](../results/outliers.png){width=70%}
 
 Biochemical variables have more outliers
 
@@ -209,16 +196,6 @@ Treatment status of different ethnicity and age
 
 <!-- Tram -->
 
-## Explorative data analysis
-
-Influence of income and ethnicity on treatment status 
-
-
-![](../results/tx_Ethnicity_income.png){width=100%, height=70%}
-
-Annual income levels and ethinicity do not seem to influence treatment status. 
-
-<!-- Tram -->
 
 ## Explorative data analysis
 
@@ -227,7 +204,7 @@ Serum albumin levels in relation to diagnosis
 ![](../results/Albumin_dx.png){width=100%, height=70%}
 Serum albumin is lower in diagnosed compared to non-diagnosed individuals. 
 
-<!-- Tram -->
+<!-- Line -->
 
 ## Principal Component Analysis
 Investigation of patterns concerning diagnosis of diabetes mellitus
@@ -235,17 +212,6 @@ Investigation of patterns concerning diagnosis of diabetes mellitus
 ![](../results/PCA_dx_filtered.png){width=100%}
 
 Variables dx, tx, leg, arml, wt and ht were excluded
-
-<!-- Line -->
-
-## Principal Component Analysis
-
-Investigation of patterns in relation to BMI
-
-![](../results/PCA_bmi.png){width=100%}
-
-
-Variables bmi, wt and ht were excluded
 
 <!-- Line -->
 
